# advent-of-code-2022

./: .gitignore  README.md  pyproject.toml
.github/workflows/: unit-test.yml
advent_of_code_2022/: dec_01_2022.py  dec_02_2022.py  dec_03_2022.py  dec_04_2022.py  dec_05_2022.py  dec_06_2022.py  dec_07_2022.py  dec_08_2022.py  dec_09_2022.py  dec_10_2022.py  utils.py
scripts/: dec-01-2022-script.py  dec-02-2022-script.py  dec-03-2022-script.py  dec-04-2022-script.py  dec-05-2022-script.py  dec-06-2022-script.py  dec-07-2022-script.py  dec-08-2022-script.py  dec-09-2022-script.py  dec-10-2022-script.py
tests/: test_advent_of_code_2022.py  test_dec_01_2022.py  test_dec_02_2022.py  test_dec_03_2022.py  test_dec_04_2022.py  test_dec_05_2022.py  test_dec_06_2022.py  test_dec_07_2022.py  test_dec_08_2022.py  test_dec_09_2022.py  test_dec_10_2022.py  test_utils.py
