[tool.poetry]
name = "advent-of-code-2022"
version = "0.1.0"
description = ""
authors = ["znorgaard <znorgaard@twinstrandbio.com>"]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.23.5"

[tool.poetry.dev-dependencies]
pytest = "^7.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
